# deploy-rs

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  data.rs  deploy.rs  lib.rs  logging.rs  push.rs
